terraform/sg.tf
# JENKINGS
resource "aws_security_group" "jenkings_sg" {
  name        = "jenkings_sg"
  description = "Security group for jenkings"
  vpc_id      = aws_vpc.eks_vpc.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
             # SSH
   ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }
}

# EKS NODE GROUP 

resource "aws_security_group" "eks_node_sg" {
  name        = "eks-node-sg"
  description = "Security group for EKS node group"
  vpc_id      = aws_vpc.eks_vpc.id

  # Allow inter-node communication
  ingress {
    description = "Allow all traffic from other nodes in the same SG"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    self        = true # CRUCIAL
  }

  # Allow traffic from ELB to NodePorts
  ingress {
    description = "Allow traffic from ELB to NodePort range"
    from_port   = 30000
    to_port     = 32767
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
<<<<<<< HEAD



  # Allow inbound HTTP traffic from Load Balancer (e.g. ALB)
  ingress {
  description = "Allow HTTP traffic from ELB"
  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }
=======
>>>>>>> parent of 5c5614e (added the rule to  the wrong group lol)

  # Outbound access
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "eks-node-sg"
    "kubernetes.io/cluster/my-eks-cluster" = "owned"

  }
}

###### experimenting 
resource "aws_security_group_rule" "allow_cp_to_nodes_443" {
  type                     = "ingress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_node_sg.id
  source_security_group_id = aws_eks_cluster.eks_cluster.vpc_config[0].cluster_security_group_id
  description              = "EKS control plane to node 443"
}

resource "aws_security_group_rule" "allow_cp_to_nodes_10250" {
  type                     = "ingress"
  from_port                = 10250
  to_port                  = 10250
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_node_sg.id
  source_security_group_id = aws_eks_cluster.eks_cluster.vpc_config[0].cluster_security_group_id
  description              = "EKS control plane to node 10250"
}
